# terminalExecutepy

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  terminalExecute.yml
mypackage.egg-info/: PKG-INFO  SOURCES.txt
src/terminalExecutepy/: terminalExecute.py
src/terminalExecutepy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
terminalExecute.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_terminalExecute.py
